--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "events": "^3.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.1",
     "fs": "^0.0.1-security",
     "path": "^0.12.7"
   },
@@ -12,7 +13,7 @@
     "nodemon": "^2.0.7"
   },
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "repository": {
